@@ -1,164 +1,100 @@
-新时代基于spring boot的业务,使用JAR包方式启动,结构简单高效,不需要依赖外部TOMCAT
+# nova
 
-### 顶层设计原则
+1：安装docker
+yum -y install gcc
+yum -y install gcc-c++
+yum remove docker \
+docker-client \
+docker-client-latest \
+docker-common \
+docker-latest \
+docker-latest-logrotate \
+docker-logrotate \
+docker-engine
 
-一次打包,到处运行.业务包与具体的环境和机房彻底分离,尽量统一公司常规的配置,
+yum install -y yum-utils device-mapper-persistent-data lvm2
+yum-config-manager --add-repo http://mirrors.aliyun.com/docker-ce/linux/centos/docker-ce.repo
+yum -y install docker-ce-18.06.3.ce
+vim /etc/docker/daemon.json
+、、、
+{
+"registry-mirrors": ["https://r5yuqwmu.mirror.aliyuncs.com"],
+"data-root": "/home/data/docker",
+"log-driver": "json-file",
+"log-opts": {"max-size":"50m", "max-file":"1"}
+}
+、、、
 
-在此基础上尽量屏蔽框架对业务的复杂性,同时保留了灵活性和可介入性.
+systemctl start docker
 
-### 工程结构介绍
+docker network create --subnet=172.18.0.0/16 mynetwork
 
-均为标准MAVEN项目
+docker pull mysql:5.7
 
-* core/ 核心工程代码所在模块
-* client/ 二方库子模块,存放接口定义,常量等代码
+docker run -p 3306:3306 --name mysql_master --net mynetwork --ip 172.18.0.36 -e TZ=Asia/Shanghai -v /home/data/docker/mysql/mysql1/logs:/logs -v /home/data/docker/mysql/mysql1/data:/var/lib/mysql -v /home/data/docker/mysql/mysql1/conf:/etc/mysql -e MYSQL_ROOT_PASSWORD=*** -d --restart=always mysql:5.7
 
-是否可以增加更多的子模块?
+docker run -p 3307:3306 --name mysql_slave1 --net mynetwork --ip 172.18.0.37 -e TZ=Asia/Shanghai -v /home/data/docker/mysql/mysql2/logs:/logs -v /home/data/docker/mysql/mysql2/data:/var/lib/mysql -v /home/data/docker/mysql/mysql2/conf:/etc/mysql -e MYSQL_ROOT_PASSWORD=*** -d --restart=always mysql:5.7
 
-这是一个问题,原则上这两个模块可以满足几乎一切业务场景,建议通过包名而不是module来划分业务模块;
-
-原有的子模块划分被证明在大部分情况下是毫无用处的,并增加了开发和维护上的复杂性.
-
-### 配置管理
-
-业务首次使用请登陆shutter创建一个新业务配置(名称必须与APP精确对应)
-
-业务所有的properties应统一在shutter中配置和管理,不要编辑application-*.properties文件,
-
-也不要在里面添加任何业务自定义的属性项, 这些文件仅仅是给shutter和基础框架初始化使用
-
-### 业务打包方式
-
-mvn clean package
-
-会在/core/target目录下生成相应JAR包(名为APP.jar),这个JAR包可以直接启动
-
-同时,会在/target目录下生成最终分发包(名为APP-dist.tgz)
-
-生产环境下打包命令参考 ./core/src/main/resources/special/build.sh
-
-#### 二方库打包方式
-
-cd client
-
-mvn clean deploy
-
-会将二方库打包并上传到maven仓库,请严格注意修改client的版本,需要修改client/pom.xml中的version以及core/pom.xml中的client-version
-
-### 启动方式
-
-#### IDEA启动
-
-选择AppMain类并作为标准Java业务启动即可
-
-#### 线下命令行启动
-
-java -jar APP.jar --spring.profiles.active=default
-
-其中
-
-* --spring.profiles.active指定了启动时加载哪个配置,如test代表application-test.properties,线下可以不需要传递该参数,使用default
-* --app.dc参数则标识当前运行机房(目前有HZ/SH/IDNU/SHU/BJU/GZU/SGU),线下则不需要传入该参数
-
-#### 生产环境启动
-
-发布系统将tgz拷贝到机器上并解压,首先执行preboot脚本,该脚本用于自定义一些特殊启动逻辑;
-脚本export下列两个环境变量
-
-* JVM_EXT_PARAM 自定义JVM启动参数,如Xmx等
-* APP_EXT_PARAM 自定义业务启动参数,将被添加到启动命令行末尾(如spring专用的'--'开头变量)
-
-发布系统解压tgz:/lib中的APP-client-VERSION.jar
-
-发布系统环境变量规范
-
-* export APP=appdemo #业务名称
-* export CLUSTER=appdemo #集群名称
-* export DC=hz #当前机房,可取值sh,hz,idnu
-* export ENV=default #当前环境,可取值如下:
-    * default 开发环境(默认值)
-    * test 测试环境
-    * smoke 冒烟测试
-    * dev-common 开发公共环境
-    * test-common 测试公共环境
-    * staging 预发环境
-    * production 正式生产环境
-    * sandbox 沙盒环境
-    * tar 压测环境
-* export GRAYLOG='192.168.6.28' #graylog地址
-* export SHUTTER='10.57.17.39:8188,10.57.17.40:8188' #shutter地址
-* export APP_RUN_MODE=fg #fg表示前台启动,否则默认为后台启动
-
-发布系统[启动脚本模版](https://gitlab.fraudmetrix.cn/module/cicd-shell-demo/raw/master/start_tpl.sh)和[启动脚本函数](https://gitlab.fraudmetrix.cn/module/cicd-shell-demo/raw/master/java/stop.sh)参考
-
-发布系统[停机脚本](https://gitlab.fraudmetrix.cn/module/cicd-shell-demo/raw/master/java/stop.sh)参考
+docker run -p 3308:3306 --name mysql_slave2 --net mynetwork --ip 172.18.0.38 -e TZ=Asia/Shanghai -v /home/data/docker/mysql/mysql3/logs:/logs -v /home/data/docker/mysql/mysql3/data:/var/lib/mysql -v /home/data/docker/mysql/mysql3/conf:/etc/mysql -e MYSQL_ROOT_PASSWORD=*** -d --restart=always mysql:5.7
 
 
-### 详解
+#zookeeper
+docker pull zookeeper:3.6
 
-#### 启动入口
+docker run -d --name zookeeper-3.6 -p 2181:2181 --net mynetwork --ip 172.18.0.37 -v /home/data/docker/zookeeper/logs:/datalog -v /home/data/docker/zookeeper/data:/data -v /home/data/docker/zookeeper/conf/zoo.cfg:/conf/zoo.cfg --restart=always -t  zookeeper:3.6
 
-AppMain为整个业务的启动入口类,一般情况下不需要对该类做任何修改
+# kafka
+docker pull wurstmeister/kafka
 
-#### 日志
+docker run -d --name kafka -p 9092:9092 -p 19092:19092 --net mynetwork --ip 172.18.0.38  -e KAFKA_BROKER_ID=0 -e KAFKA_ZOOKEEPER_CONNECT=172.18.0.37:2181 -e KAFKA_INTER_BROKER_LISTENER_NAME=INTERNAL -e KAFKA_LISTENER_SECURITY_PROTOCOL_MAP=INTERNAL:PLAINTEXT,EXTERNAL:PLAINTEXT -e KAFKA_ADVERTISED_LISTENERS=INTERNAL://172.18.0.38:19092,EXTERNAL://106.13.38.56:9092 -e KAFKA_LISTENERS=INTERNAL://0.0.0.0:19092,EXTERNAL://0.0.0.0:9092 --restart=always -t wurstmeister/kafka
 
-* 线下环境一般是/tmp/output/APP/logs
-* 其它环境一般是/home/admin/output/APP/logs
+# redis
+docker pull redis
 
-其中,tomcat的accesslog默认已启用
+docker run -p 6379:6379 --name redis --net mynetwork --ip 172.18.0.39 -v /home/data/docker/redis/conf/redis.conf:/usr/local/etc/redis/redis.conf -v /home/data/docker/redis/data:/data -d redis /usr/local/etc/redis/redis.conf
 
-#### 优雅停机任务
+# canal
+docker pull canal/canal-server:v1.1.4
 
-发布系统在停机时会触发/ok.html?down=true,等待若干秒后(6s)才会真正执行kill,
-业务上若有需要预先停止的资源请调用AppMain.addPreHaltTask()方法添加相关逻辑;
+# 创建账号
+CREATE USER canal IDENTIFIED BY '***';
+# 授予权限
+GRANT SELECT, REPLICATION SLAVE, REPLICATION CLIENT ON *.* TO 'canal'@'%';
+GRANT ALL PRIVILEGES ON *.* TO 'canal'@'%' ;
+# 刷新并应用
+FLUSH PRIVILEGES;
 
-#### TOMCAT特殊配置
+docker run -d --name canal -p 11111:11111 --net mynetwork --ip 172.18.0.41 -e canal.destinations=hermes -e canal.instance.mysql.slaveId=12 -e  canal.auto.scan=false -e canal.instance.master.address=172.18.0.36:3306 -e canal.instance.dbUsername=canal -e canal.instance.dbPassword=*** -e  canal.instance.filter.regex=esen_approval.apt_approval --restart=always canal/canal-server:v1.1.4
 
-对于大部分业务而言默认tomcat参数足够应对,如果有特殊需求(如增大线程池最大线程数),
-请在相应环境的properties中修改
+#grafana
+# 创建持久化目录
+cd /root/data/docker
+mkdir -p grafana/data
+mkdir -p grafana/logs
+# 将修改后的配置文件放在指定的目录
+cp grafana.ini grafana/
+# 修改目录权限，docker方式启动grafana使用的uid和gid为472
+chown 472:472 grafana/data -R
+# 启动容器
+docker run -d -p 3000:3000 --name=grafana -v /root/data/docker/grafana/data:/var/lib/grafana -v /root/data/docker/grafana/logs:/var/log/grafana -v /root/data/docker/grafana/grafana.ini:/etc/grafana/grafana.ini --restart=always grafana/grafana:7.2.1
+外网访问: http://ip:3000/login  初始用户名/密码为admin/admin。
+配置文件: 📎grafana.ini （需要将该文件中的domain改为服务器的外网ip，否则告警通知链接的host是localhost）
 
-#### 运行时状态
+# influxdb
+# 创建持久化目录
+cd /root/data/docker
+mkdir -p influxdb
+# 启动容器
+docker run -d -p 8086:8086 --name=influxdb -v /root/data/docker/influxdb:/var/lib/influxdb --restart=always influxdb:1.8
 
-该功能为2019.1.2新加入
+# 启动influxdb客户端
+docker exec -it influxdb influx
+# 创建数据库，数据ttl 2周
+CREATE DATABASE "hermes" WITH DURATION 2w REPLICATION 1 NAME "default";
+CREATE DATABASE "voiking" WITH DURATION 2w REPLICATION 1 NAME "default";
+CREATE DATABASE "sms" WITH DURATION 2w REPLICATION 1 NAME "default";
 
-用户通过访问/metadata/env/&lt;property.name&gt;/可获取当前进程的各类环境变量
+访问：http://ip:8086 用户名/密码随意
 
-例如/metadata/env/commit/即可拿到当前代码的git commit id
 
-参考文档
-https://docs.spring.io/spring-boot/docs/current/reference/html/common-application-properties.html
-
-#### 默认JVM参数
-
-以下配置针对生产环境标准4C8G机器
-```text
--server -XX:MaxMetaspaceSize=256m -Xss256k -XX:+UseG1GC -XX:MaxGCPauseMillis=100
--XX:G1ReservePercent=10 -XX:InitiatingHeapOccupancyPercent=30
--XX:ConcGCThreads=4 -Xmx4g -Xms4g -XX:+PrintGCDateStamps -XX:+PrintGCDetails
--Xloggc:/home/admin/output/$APP/logs/gc.log -XX:+PrintGCApplicationStoppedTime
--XX:+HeapDumpOnOutOfMemoryError -XX:HeapDumpPath=/home/admin/output/$APP/
--Djava.awt.headless=true -Djava.net.preferIPv4Stack=true -Dfile.encoding=UTF-8
--Djava.net.preferIPv4Addresses -DdisableIntlRMIStatTask=true
--Dcom.sun.management.jmxremote
--Dcom.sun.management.jmxremote.authenticate=false
--Dcom.sun.management.jmxremote.ssl=false
--Djava.rmi.server.hostname=\`hostname\`
-```
-
-#### mybatis注意事项
-
-> 若要使用mybatis，请注意使用spring集成版本mybatis
-
-* 设置mybatis和spring-boot的依赖库，不要设置默认的spring库，否则可能引起莫名错误
-
-    ```xml
-    <mybatis-spring-boot-starter-version>1.3.2</mybatis-spring-boot-starter-version>
-    ```
-    ```xml
-    <dependency>
-        <groupId>org.mybatis.spring.boot</groupId>
-        <artifactId>mybatis-spring-boot-starter</artifactId>
-        <version>${mybatis-spring-boot-starter-version}</version>
-    </dependency>
-    ```
 
